1. Улучшения Collection API [#296103]